--- a/src/main/resources/templates/Html.html
+++ b/src/main/resources/templates/Html.html
@@ -16,7 +16,7 @@
 <div class="topnav">
     <a class="active" href="/">Home</a>
     <a href="">what to do</a>
-    <a href="#whatnottodo">what not to do</a>
+    <a href="/whatNotToDo">what not to do</a>
 </div>
 <br/>
 <p class ="tab"><b>Proper public door holding etiquette</b></p>
