--- a/src/main/resources/templates/whatNotToDo.html
+++ b/src/main/resources/templates/whatNotToDo.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
           integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/CSS/Css.css">
     <title>Title</title>
 </head>
 <body>
 <div class="topnav">
     <a class="active" href="#home">Home</a>
     <a href="#whattodo">what to do</a>
-    <a href="#whatnottodo">what not to do</a>
+    <a href="/whatNotToDo">what not to do</a>
 </div>
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
